WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270352
Resuming audio playing of HTMLMediaElement via AudioContext does not work if user switched from tab
https://bugs.webkit.org/show_bug.cgi?id=270352
Summary
Resuming audio playing of HTMLMediaElement via AudioContext does not work if ...
youenn fablet
Reported
2024-03-01 08:18:16 PST
Resuming audio playing of HTMLMediaElement via AudioContext does not work if user switched from tab
Attachments
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2024-03-01 08:18:44 PST
This reproes from me using
https://jsfiddle.net/omb6xw30/
on latest macOS STP and iOS.
Radar WebKit Bug Importer
Comment 2
2024-03-01 08:18:59 PST
<
rdar://problem/123901202
>
youenn fablet
Comment 3
2024-05-15 05:50:11 PDT
<
rdar://128125080
>
youenn fablet
Comment 4
2024-05-15 05:58:03 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28592
EWS
Comment 5
2024-05-16 05:02:14 PDT
Committed
278859@main
(b1479358ffa9): <
https://commits.webkit.org/278859@main
> Reviewed commits have been landed. Closing PR #28592 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug