Resuming audio playing of HTMLMediaElement via AudioContext does not work if user switched from tab https://bugs.webkit.org/show_bug.cgi?id=270352 rdar://123901202

Reviewed by Eric Carlson.

When switching from one tab to the other, we are setting AVPlayer resourceConservationLevelWhilePaused to AVPlayerResourceConservationLevelReuseActivePlayerResources.
When getting back to the tab, we set it back to AVPlayerResourceConservationLevelNone.
But the AVPlayer audio mix is not functional anymore.

We implement a workaround at WebKit level by recreating the audio mix if needed whenever moving out of AVPlayerResourceConservationLevelReuseActivePlayerResources.

Covered by added test.

* LayoutTests/webaudio/audiomix-bufferingpolicy-expected.txt: Added.
* LayoutTests/webaudio/audiomix-bufferingpolicy.html: Added.
* Source/WebCore/html/HTMLMediaElement.h:
* Source/WebCore/platform/graphics/avfoundation/AudioSourceProviderAVFObjC.h:
* Source/WebCore/platform/graphics/avfoundation/AudioSourceProviderAVFObjC.mm:
(WebCore::AudioSourceProviderAVFObjC::recreateAudioMixIfNeeded):
* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::setBufferingPolicy):
* Source/WebCore/testing/Internals.cpp:
(WebCore::Internals::setMediaElementelementBufferingPolicy):
* Source/WebCore/testing/Internals.h:
* Source/WebCore/testing/Internals.idl:

Canonical link: https://commits.webkit.org/278859@main